Fix review findings

--- a/src/main/resources/sonia/scm/issuetracker/internal/resubmit/resubmit-mail_de.mustache
+++ b/src/main/resources/sonia/scm/issuetracker/internal/resubmit/resubmit-mail_de.mustache
@@ -1,7 +1,7 @@
-# Erneutes Senden der Komemntare für Issue Tracker {{ issueTracker }}
+# Erneutes Senden der Kommentare für Issue Tracker {{ issueTracker }}
 
 * **{{ removeCount }}** erfolgreich gesendet
 * **{{ requeueCount }}** konnten nicht gesendet werden und werden wieder eingereiht
 
 Wieder eingereihte Kommentare können über die
-[Issue Tracker Admin Oberfläche]({{ url }}) erneute gesendet oder gelöscht werden.
+[Issue Tracker Admin Oberfläche]({{ url }}) erneut gesendet oder gelöscht werden.
